# floating-in-space

./: Cargo.toml  LICENSE  README.md
assets/config/: display.ron  input.ron  log.ron
assets/prefab/: scene_prefab.ron
assets/ui/: info.ron  loading.ron
src/: main.rs  prefab.rs  states.rs
src/controls/: mod.rs  movement.rs  rotation.rs
