[package]
name = "floating-in-space"
version = "0.1.0"
authors = ["Jamee Kim <jameekim@nodaplife.me>"]
edition = "2018"
license = "MIT"

[dependencies]
amethyst = { git = "git://github.com/amethyst/amethyst.git", rev = "master" }
amethyst_gltf = { git = "git://github.com/amethyst/amethyst.git", rev = "master" }
derivative = "1.0.2"
log = "0.4.6"
serde = { version = "1.0.87", features = ["derive"] }
specs-derive = "0.4.0"
